# BUGOUT

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  architecture.excalidraw  build-all-dc.sh  build-all-local.sh  build-all-min.sh  build-all.sh  build-bugle.sh  build-changelog.sh  build-cloud.sh  build-fcos.sh  build-gateway.sh  build-giant-dc-fcos.sh  build-giant-dc.sh  build-judge.sh  build-micro-local.sh  build-micro.sh  build-tiny-dc-fcos.sh  build-tiny-dc.sh  cargo-clean-build.sh  compose.sh  dc-giant-dev.yml  dc-giant.yml  dc-tiny.yml  dit-gateway.sh  dl-gateway.sh  docker-compose.yml  fancy-build.sh  gradle-clean-build.sh  kafka-topo.md  kill-some-jvms.sh  old-changelog.md  open-games.sh  restartup.sh  start-giant.sh  (+2 more)
admin/: .env.example  (+21 more)
botlink/: Cargo.toml  Dockerfile  README.md  dev-cp.sh
botlink/bot-model/: Cargo.toml
botlink/bot-model/src/: api.rs  lib.rs
botlink/src/: env.rs  lib.rs  main.rs  max_visits.rs  registry.rs  websocket.rs
botlink/src/repo/: attached_bots.rs  attachment.rs  board_size.rs  dead_ab.rs  difficulty.rs  entry_id.rs  entry_ids.rs  game.rs  mod.rs  redis_keys.rs
botlink/src/stream/: convert.rs  init.rs  input.rs  mod.rs  opts.rs  topics.rs  unack.rs  write_moves.rs  xack.rs  xadd.rs  xread.rs
bugle/: Cargo.toml  Dockerfile  README.md  dev-cp.sh
bugle/src/: dev-cp.sh  ec2_startup.rs  env.rs  lib.rs  main.rs  subscriber.rs  wakeup.rs
gateway/: Cargo.toml  Dockerfile  README.md  build.sh  dev-cp.sh  dev-run.sh  dev.sh  no_run.sh  run.sh  wait-run.sh
gateway/examples/: client.rs  encode_uuid.rs  history.rs
gateway/src/: backend_commands.rs  backend_events.rs  channels.rs  client_commands.rs  client_events.rs  compact_ids.rs  constants.rs  env.rs  idle_status.rs  json.rs  kafka.rs  kafka_commands.rs  kafka_events.rs  kafka_io.rs  lib.rs  logging.rs  main.rs  model.rs  router.rs  server.rs  topics.rs  wakeup.rs  websocket.rs
gateway/src/backend/: choose.rs  client_repo.rs  doubler.rs  game_repo.rs  mod.rs  repo.rs  repo_err.rs  session_repo.rs  split.rs  start.rs
gateway/src/backend/commands/: from.rs  into_shared.rs  mod.rs
gateway/src/backend/events/: from.rs  mod.rs
gateway/src/redis_io/: command_writer.rs  entry_id_repo.rs  into_shared.rs  key_provider.rs  mod.rs  namespace.rs  stream.rs  unacknowledged.rs  xack.rs  xadd.rs  xread.rs
micro-changelog/: Cargo.toml  Dockerfile  README.md  dev-cp.sh
micro-changelog/src/: lib.rs  main.rs  model.rs
micro-changelog/src/repo/: entry_id.rs  entry_id_repo.rs  game_states.rs  game_states_repo.rs  mod.rs  redis_key.rs
micro-changelog/src/stream/: messages.rs  mod.rs  topics.rs  xread.rs
micro-changelog/tests/: integration.rs
micro-color-chooser/: Cargo.toml  Dockerfile
micro-color-chooser/color-model/: Cargo.toml
micro-color-chooser/color-model/src/: api.rs  lib.rs
micro-color-chooser/src/: api.rs  components.rs  lib.rs  main.rs  model.rs  repo.rs
micro-color-chooser/src/repo/: game.rs  game_ready.rs  mod.rs  prefs.rs
micro-color-chooser/src/service/: choose.rs  game_color_prefs.rs  mod.rs
micro-color-chooser/src/stream/: init.rs  mod.rs  topics.rs  xadd.rs  xread.rs
micro-game-lobby/: Cargo.toml  Dockerfile  README.md  build.sh
micro-game-lobby/.devcontainer/: Dockerfile  devcontainer.json
micro-game-lobby/lobby-model/: Cargo.toml
micro-game-lobby/lobby-model/src/: api.rs  lib.rs
micro-game-lobby/src/: api.rs  components.rs  entry_id_repo.rs  game_lobby.rs  lib.rs  main.rs  topics.rs
micro-game-lobby/src/repo/: entry_id_repo.rs  game_lobby_repo.rs  mod.rs
micro-game-lobby/src/stream/: init.rs  mod.rs  xack.rs  xadd.rs  xread.rs
micro-history-provider/: Cargo.toml  Dockerfile
micro-history-provider/src/: api.rs  components.rs  lib.rs  main.rs  model.rs  time.rs
micro-history-provider/src/repo/: mod.rs
micro-history-provider/src/stream/: mod.rs  topics.rs  xadd.rs  xread.rs
micro-judge/: .Cargo.toml.swp  Cargo.toml  Dockerfile  README.md  dev-cp.sh
micro-judge/src/: conn_pool.rs  lib.rs  main.rs  model.rs  stream.rs  topics.rs
micro-judge/src/game/: capturing.rs  mod.rs
micro-judge/src/io/: ack.rs  conn_pool.rs  entry_id.rs  game_states_repo.rs  messages.rs  mod.rs  redis_keys.rs  stream.rs  topics.rs  xread.rs
micro-judge/src/repo/: entry_id.rs  game_states.rs  mod.rs
micro-judge/tests/: client_xadd.rs  integration.rs
micro-model/bot/: Cargo.toml  README.md
micro-model/bot/src/: gateway.rs  lib.rs
micro-sync/: Cargo.toml  Dockerfile
micro-sync/src/: README.md  api.rs  components.rs  lib.rs  main.rs  model.rs  player.rs  sync.rs  to_history.rs
micro-sync/src/repo/: history.rs  last_move_made.rs  mod.rs  reply.rs
micro-sync/src/stream/: init.rs  mod.rs  topics.rs  xadd.rs  xread.rs
micro-sync/sync-model/: Cargo.toml
micro-sync/sync-model/src/: api.rs  lib.rs
move-model/: Cargo.toml
move-model/src/: lib.rs
reaper/: Cargo.toml  Dockerfile  README.md  dev-cp.sh  dev-run.sh  run.sh
reaper/examples/: shutdown.rs
reaper/src/: env.rs  kafka.rs  lib.rs  main.rs  model.rs  monitor.rs  reaper.rs  shutdown.rs  topics.rs
redis_streams/: Cargo.toml  README.md
redis_streams/src/: consumer.rs  consumer_group.rs  consumer_group_opts.rs  lib.rs  sorted_streams.rs  stream_handler.rs
redis_streams/src/repo/: mod.rs
tinybrain/: .gitignore  Cargo.toml  Dockerfile  README.md  analysis.cfg  run_analysis.sh  start-tinybrain.sh  tinybrain.service
tinybrain/dockerfail/: Dockerfile  build.sh  run.sh
tinybrain/examples/: fake_server.rs  repl.rs  server.rs  stdin.rs
tinybrain/src/: .main.rs.swp  authorization.rs  env.rs  err.rs  katago_json.rs  lib.rs  main.rs  websocket.rs
tinybrain/src/katago/: json.rs  mod.rs
tinybrain/src/websocket/: mod.rs
undo/: Cargo.toml  Dockerfile
undo/src/: components.rs  lib.rs  main.rs
undo/src/repo/: bot.rs  botness.rs  expire.rs  game_state.rs  mod.rs
undo/src/stream/: handlers.rs  init.rs  mod.rs  process.rs  topics.rs  undo.rs  xack.rs  xadd.rs  xread.rs
undo/undo-model/: Cargo.toml
undo/undo-model/src/: api.rs  lib.rs
(+388 files in other folders)
