[package]
name = "bugle"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.13.0"
r2d2_redis = "0.12.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
rusoto_ec2 = "0.42.0"
chrono = "0.4.10"
rusoto_core = "0.42.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
