[package]
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "gateway"
version = "0.15.0-a"

[dependencies]
bincode = "1.2.1"
chrono = {version = "0.4.10", features = ["serde"]}
crossbeam = "0.7.3"
crossbeam-channel = "0.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
envy = "0.4.0"
futures = "0.3.4"
harsh = "0.1.6"
lazy_static = "1.4.0"
log = "0.4.8"
micro_model_bot = {git = "https://github.com/Terkwood/BUGOUT", branch = "unstable"}
micro_model_moves = {git = "https://github.com/Terkwood/BUGOUT", branch = "unstable"}
mio-extras = "2.0.6"
r2d2_redis = "0.13.0"
rand = "0.7.2"
rdkafka = "0.23.0"
redis_streams = {git = "https://github.com/Terkwood/BUGOUT", version = "0.2.0", rev = "fdad420"}
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.44"
time = "0.1.42"
uuid = {version = "0.8.1", features = ["v4", "serde"]}
ws = "0.9.1"

[dev-dependencies]
rand = "0.7.2"
