[package]
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "gateway"
version = "1.2.0"

[dependencies]
bincode = "1.3.1"
bot-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "3a9c4b5"}
chrono = {version = "0.4.19", features = ["serde"]}
color-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "06c3cc4"}
core-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
dotenv = "0.15.0"
env_logger = "0.8.1"
envy = "0.4.1"
futures = "0.3.6"
harsh = "0.1.6"
lazy_static = "1.4.0"
lobby-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "0dd79c5"}
log = "0.4.11"
mio-extras = "2.0.6"
move-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
rand = "0.7.3"
redis = {version = "0.17.0", features = ["r2d2"]}
redis_streams = {git = "https://github.com/Terkwood/BUGOUT", rev = "2ea71cd"}
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
sync-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "fa195a9"}
time = "0.2.22"
undo-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "a5721e6"}
uuid = {version = "0.8.1", features = ["v4", "serde"]}
ws = "0.9.1"

[dev-dependencies]
rand = "0.7.3"
