[package]
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "micro-changelog"
version = "0.2.0"

[dependencies]
bincode = "1.3.1"
core-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
env_logger = "0.8.1"
log = "0.4.11"
move-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
redis = {git = "https://github.com/mitsuhiko/redis-rs"}
redis_streams = {git = "https://github.com/Terkwood/BUGOUT", version = "0.3.1", rev = "0e2fdb7"}
uuid = {version = "0.8.1", features = ["serde"]}
