[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
name = "micro-color-chooser"
repository = "https://github.com/Terkwood/BUGOUT"
version = "0.1.1"

[dependencies]
bincode = "1.3.1"
env_logger = "0.7.1"
log = "0.4.11"
rand = "0.7.3"
redis = {version = "0.17.0", features = ["r2d2"]}
redis_streams = {git = "https://github.com/Terkwood/BUGOUT", version = "0.3.1", rev = "0e2fdb7"}
serde = "1.0.116"
serde_derive = "1.0.116"
uuid = {version = "0.8.1", features = ["serde", "v4"]}

[dev-dependencies]
crossbeam-channel = "0.4.4"
