[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
name = "micro-color-chooser"
repository = "https://github.com/Terkwood/BUGOUT"
version = "1.0.0"

[dev-dependencies]
crossbeam-channel = "0.5.1"

[dependencies]
bincode = "1.3.3"
color-model = {path = "color-model"}
core-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
env_logger = "0.8.3"
log = "0.4.14"
rand = "0.8.3"
redis = { version = "0.20.1", features = ["r2d2"] }
redis_streams = {git = "https://github.com/Terkwood/BUGOUT", version = "1.0.0", rev = "3b24f52"}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
