[package]
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "micro-game-lobby"
version = "0.1.2"

[dependencies]
bincode = "1.2.1"
community-redis-streams = {version = "0.1.1", package = "redis-streams"}
core-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "f2d039e"}
crossbeam = "0.7.3"
crossbeam-channel = "0.4.2"
env_logger = "0.7.1"
lobby-model = {path = "lobby-model"}
log = "0.4.8"
redis = {version = "0.16.0", features = ["r2d2"]}
redis_streams = {git = "https://github.com/Terkwood/BUGOUT", version = "0.3.0", rev = "92b8d91abba494737caca525ecb2a4f0d7044dbd"}
