[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
name = "micro-history-provider"
repository = "https://github.com/Terkwood/BUGOUT"
version = "0.1.0"

[dependencies]
redis = {version = "0.17.0", features = ["r2d2"]}
serde = "1.0.116"
serde_derive = "1.0.116"
bincode = "1.3.1"
