[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
name = "micro-history-provider"
repository = "https://github.com/Terkwood/BUGOUT"
version = "0.1.0"

[dependencies]
bincode = "1.3.1"
redis = {version = "0.17.0", features = ["r2d2"]}
serde = "1.0.116"
serde_derive = "1.0.116"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
log = "0.4.11"
env_logger = "0.7.1"
