[package]
name = "micro_judge"
version = "0.1.11"
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
bincode = "1.2.1"
micro_model_moves = { git = "https://github.com/Terkwood/BUGOUT", branch = "unstable" }
redis = { git = "https://github.com/mitsuhiko/redis-rs", rev = "aaecd6734a4c1f0bc59c96429d0e2102348e23ef", features = ["r2d2"] }
# TODO below
redis_streams = { git = "https://github.com/Terkwood/BUGOUT", branch = "tinker/streams" }
env_logger = "0.7.1"
log = "0.4.8"

# tips https://www.philipdaniels.com/blog/2019/rust-release-mode-builds/
[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3