[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
name = "micro-sync"
repository = "https://github.com/Terkwood/BUGOUT"
version = "0.2.2"

[dependencies]
bincode = "1.3.1"
core-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "af087ee"}
env_logger = "0.7.1"
log = "0.4.11"
move-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "af087ee"}
redis = {version = "0.17.0", features = ["r2d2"]}
redis_streams = {git = "https://github.com/Terkwood/BUGOUT", rev = "af087ee"}
serde = "1.0.116"
serde_derive = "1.0.116"
sync-model = {path = "sync-model"}
uuid = {version = "0.8.1", features = ["serde", "v4"]}

[dev-dependencies]
crossbeam-channel = "0.4.4"
