[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
name = "micro-sync"
repository = "https://github.com/Terkwood/BUGOUT"
version = "1.0.0"

[dependencies]
bincode = "1.3.3"
env_logger = "0.8.3"
log = "0.4.14"
redis = {version = "0.20.1", features = ["r2d2"]}
redis_streams = {git = "https://github.com/Terkwood/BUGOUT", version = "1.0.0", rev = "a394d46"}
serde = "1.0.126"
serde_derive = "1.0.126"
sync-model = {path = "sync-model"}
uuid = {version = "0.8.2", features = ["serde", "v4"]}

[dev-dependencies]
crossbeam-channel = "0.5.1"
