[package]
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "move-model"
version = "0.2.0"

[dependencies]
bincode = "1.3.1"
serde = "1.0.116"
serde_derive = "1.0.116"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

#TODO#TODO#TODO#TODO
#TODO#TODO#TODO#TODO
#TODO#TODO#TODO#TODO
#TODO#TODO#TODO#TODO
#TODO#TODO#TODO#TODO
#TODO#TODO#TODO#TODO
core-model = {git = "https://github.com/Terkwood/BUGOUT", branch = "fix/shared-structs"}
