[package]
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "move-model"
version = "0.4.0"

[dependencies]
bincode = "1.3.1"
core-model = {path = "../core-model"}
serde = "1.0.117"
serde_derive = "1.0.117"

[dev-dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
