[package]
name = "reaper"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
lazy_static = "1.4.0"
rusoto_core = "0.40.0"
rusoto_ec2 = "0.40.0"
