[package]
name = "reaper"
version = "0.1.0"
authors = ["Terkwood <metaterkhorn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
lazy_static = "1.4.0"
rusoto_core = "0.40.0"
rusoto_ec2 = "0.40.0"
crossbeam = "0.7.2"
crossbeam-channel = "0.3.9"
rdkafka = "0.21.0"
futures = "0.1.29"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
chrono = "0.4.9"
rusoto_sts = "0.40.0"
rusoto_credential = "0.40.0"
