[package]
name = "redis_streams"
version = "0.3.1"
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8.1", features = ["serde","v4"] }
redis = { git = "https://github.com/Terkwood/redis-rs", rev = "0d126f54d6970b931594bf677b09a368af70617d" }
