[package]
name = "tinybrain"
version = "0.2.0"
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

[dependencies]
micro_model_bot = { git = "https://github.com/Terkwood/BUGOUT", branch = "unstable" }
micro_model_moves = { git = "https://github.com/Terkwood/BUGOUT", branch = "unstable" }
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.110"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
bincode = "1.2.1"
dotenv = "0.15.0"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.2"
lazy_static = "1.4.0"
base64 = "0.12.1"
http = "0.2.1"
env_logger = "0.7.1"
log = "0.4.8"
futures-util = { version = "0.3.5", default-features = false, features = ["async-await", "sink", "std"] }
tokio-tungstenite = { version = "0.10.1", features = ["tls"] }
tokio = { version = "0.2.20", default-features = false, features = ["io-std", "io-util", "macros", "stream", "time"] }
tokio-tls = "0.3.1"

[dev-dependencies]
text_io = "0.1.8"
tungstenite = { version = "0.10.1", features = ["tls"] }
