[package]
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "undo"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
bot-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "3a9c4b5"}
core-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
env_logger = "0.8.3"
log = "0.4.14"
move-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
redis = {version = "0.20.0", features = ["r2d2"]}
redis_streams = {git = "https://github.com/Terkwood/BUGOUT", rev = "2ea71cd"}
serde = "1.0.125"
serde_derive = "1.0.125"
undo-model = {path = "undo-model"}
