[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "bot-model"
version = "2.0.0"

[dependencies]
core-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
move-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
serde = "1.0.117"
serde_derive = "1.0.117"

[dev-dependencies]
serde_json = "1.0.59"
uuid = "0.8.1"
