[package]
authors = ["Terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "color-model"
version = "0.1.2"

[dependencies]
core-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "f2d039e"}
lobby-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "ca55886"}
serde = "1.0.116"
serde_derive = "1.0.116"
