[package]
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"
name = "undo-model"
version = "0.1.0"

[dependencies]
core-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
move-model = {git = "https://github.com/Terkwood/BUGOUT", rev = "20e6620"}
serde = "1.0.125"
serde_derive = "1.0.125"
